[package]
name = "ankurah-core"
description = "Core state management functionality for Ankurah"
version = "0.1.0"
edition = "2021"

[features]
default = ["derive"]
derive = ["ankurah-derive"]

[dependencies]
anyhow = "1.0.89"
thiserror = "2"
chrono = "0.4.38"
dirs = "5.0.1"
futures-signals = "0.3.34"
serde = "1.0.210"
erased-serde = "0.4.5"
sled = "0.34.7"
tokio = { version = "1.40.0", features = ["full"] }
ulid = "1.1.3"
ankurah-derive = { path = "../derive", optional = true }
tracing = "0.1.40"
yrs = "0.21.2"
bincode = "1.3.3"

append-only-vec = "0.1.7"


[dev-dependencies]
ankurah-derive = { path = "../derive" }
tracing-subscriber = "0.3.18"
