[package]
name = "ankurah-core"
description = "Core state management functionality for Ankurah"
version = "0.1.0"
edition = "2021"

[features]
default = ["derive"]
derive = ["ankurah-derive"]
postgres = ["dep:tokio-postgres", "dep:bb8", "dep:bb8-postgres"]

[dependencies]
# Internal dependencies
ankurah-derive = { path = "../derive", optional = true }
ankql = { path = "../ankql" }
ankurah-proto = { path = "../proto" }


anyhow = "1.0.89"
thiserror = "2"
chrono = "0.4.38"
dirs = "5.0.1"
futures-signals = "0.3.34"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
ulid = { version = "1.1.3", features = ["serde", "uuid"] }
uuid = "1.1"
tracing = "0.1.40"
bincode = "1.3.3"
append-only-vec = "0.1.7"
async-trait = "0.1.83"

# CRDTs
yrs = "0.21.2"

# Storage engines
sled = "0.34.7"
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1"], optional = true }
bb8 = { version = "0.9", optional = true }
bb8-postgres = { version = "0.9.0", optional = true }

[dev-dependencies]
ankurah-derive = { path = "../derive" }
tracing-subscriber = "0.3.18"
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
ctor = "0.2.9"
